--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jarcl",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Just Another React Component Library",
   "author": "Bruno Sartori &lt;brunosartori.webmaster@gmail.com&gt;",
   "license": "MIT",
@@ -21,7 +21,8 @@
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "build:webpack": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --mode production"
   },
   "peerDependencies": {
     "react": "^16.0.0"
@@ -36,7 +37,6 @@
     "@types/react-dom": "^16.9.7",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
-    "microbundle-crl": "^0.13.10",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
@@ -50,14 +50,22 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "webpack-cli": "^3.3.12"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "sass": "^1.26.10",
+    "ts-loader": "^8.0.3"
+  }
 }
