--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "sass": "^1.26.10",
+    "sass-loader": "^10.0.1",
     "ts-loader": "^8.0.3"
   }
 }
